fixed some spacing

--- a/Website Practice 1/css/main.css
+++ b/Website Practice 1/css/main.css
@@ -103,6 +103,7 @@ textarea {
 html, body {
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 
@@ -290,7 +291,7 @@ html, body {
 
 .featured {
     width: 1440px;
-    height: 917px;
+    height: 877px;
     border-bottom: 1px solid #b8b8b8;
 }
 
@@ -370,7 +371,7 @@ html, body {
 
 .bottom {
     position: relative;
-    top: 200px;
+    top: 120px;
 }
 
 .bottom article:last-of-type {
